Bug 324903 - kincidenceeditor crashes on new event
Summary: kincidenceeditor crashes on new event
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 4.11.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-14 08:12 UTC by Gerd Fleischer
Modified: 2013-09-14 19:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerd Fleischer 2013-09-14 08:12:44 UTC
When clicking ok after entering a new event in kincidenceeditor it crashes.
Only clicking apply works.

no debug packages installed, no useful backtrace

Application: KOrganizer (kincidenceeditor), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x00007fae7711ed25 in raise () from /lib64/libc.so.6
#6  0x00007fae771201a8 in abort () from /lib64/libc.so.6
#7  0x00007fae7715cfcb in __libc_message () from /lib64/libc.so.6
#8  0x00007fae77162b66 in malloc_printerr () from /lib64/libc.so.6
#9  0x00007fae77928888 in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#10 0x00007fae7836cb1a in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#11 0x00007fae7831d91c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#12 0x00007fae78321d9a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#13 0x00007fae79c80d76 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#14 0x00007fae77913e7e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#15 0x00007fae779177e1 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#16 0x00007fae77942343 in ?? () from /usr/lib64/libQtCore.so.4
#17 0x00007fae71b0e3b5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#18 0x00007fae71b0e6e8 in ?? () from /usr/lib64/libglib-2.0.so.0
#19 0x00007fae71b0e7a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#20 0x00007fae779424d6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#21 0x00007fae783bddde in ?? () from /usr/lib64/libQtGui.so.4
#22 0x00007fae77912b2f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#23 0x00007fae77912db8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#24 0x00007fae77917af8 in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#25 0x0000000000402a0c in ?? ()
#26 0x00007fae7710b455 in __libc_start_main () from /lib64/libc.so.6
#27 0x0000000000402e21 in _start ()

Reproducible: Always

Steps to Reproduce:
1. Create new event
2. Click OK-Button
3. Crash


Expected Results:  
No Crash
Comment 1 Sergio Martins 2013-09-14 19:20:08 UTC
Git commit a20b1355ae26e20b69948923b1043cb93d4b8d43 by Sergio Martins.
Committed on 14/09/2013 at 19:15.
Pushed by smartins into branch 'KDE/4.11'.

Fix double delete crash.

M  +2    -2    incidenceeditor-ng/main.cpp

http://commits.kde.org/kdepim/a20b1355ae26e20b69948923b1043cb93d4b8d43