Fix double delete crash.

BUG: 324903