incidenceeditor-ng/main.cpp
@@ -119,8 +119,8 @@ int main( int argc, char **argv )
 
   EditorConfig::setEditorConfig( new KOrganizerEditorConfig );
 
-  IncidenceDialog dialog;
-  dialog.load( item ); // The dialog will show up once the item is loaded.
+  IncidenceDialog *dialog = new IncidenceDialog();
+  dialog->load( item ); // The dialog will show up once the item is loaded.
 
   return app.exec();
 }
